--- a/controle_series_symfony/templates/episodes/index.html.twig
+++ b/controle_series_symfony/templates/episodes/index.html.twig
@@ -5,9 +5,19 @@
 {% endblock %}
 
 {% block body %}
-    <ul class="list-group">
-        {% for episode in episodes %}
-            <li class="list-group-item">Episódio {{ episode.number }}</li>
-        {% endfor %}
-    </ul>
+    <form method="post">
+        <ul class="list-group">
+            {% for episode in episodes %}
+                <li class="list-group-item d-flex justify-content-between">
+                    <label for="episodes[{{episode.id}}]" class="container-fluid">
+                        Episódio {{ episode.number }}
+                    </label>
+                    <input type="checkbox" name="episodes[{{episode.id}}]" id="episodes[{{episode.id}}]">
+                </li>
+            {% endfor %}
+        </ul>
+        <button class="btn btn-primary my-2">
+            Salvar
+        </button>
+    </form>
 {% endblock %}
