--- a/controle_series_symfony/templates/seasons/index.html.twig
+++ b/controle_series_symfony/templates/seasons/index.html.twig
@@ -11,7 +11,9 @@
         <a href="{{ path('app_episodes', { season: season.id }) }}">
             Temporada {{ season.number }}
         </a>
-        <span class="badge text-bg-secondary">{{ season.episodes | length }}</span>
+        <span class="badge text-bg-secondary">
+            {{ season.watchedEpisodes | length }} / {{ season.episodes | length }}
+        </span>
     </li>
     {% endfor %}
 </ul>
