--- a/controle_series_symfony/templates/login/index.html.twig
+++ b/controle_series_symfony/templates/login/index.html.twig
@@ -8,15 +8,18 @@
     {% endif %}
 
     <form action="{{ path('app_login') }}" method="post">
-        <label for="username">Email:</label>
-        <input type="text" id="username" name="_username" value="{{ last_username }}">
+        <div class="mb-3">
+            <label for="username" class="form-label">Email:</label>
+            <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}">
+        </div>
 
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="_password">
-
+        <div class="mb-3">
+            <label for="password" class="form-label">Password:</label>
+            <input type="password" class="form-control" id="password" name="_password">
+        </div>
         {# If you want to control the URL the user is redirected to on success
         <input type="hidden" name="_target_path" value="/account"> #}
 
-        <button type="submit">Login</button>
+        <button type="submit" class="btn btn-primary">Login</button>
     </form>
 {% endblock %}
