--- a/controle_series_symfony/templates/base.html.twig
+++ b/controle_series_symfony/templates/base.html.twig
@@ -21,6 +21,10 @@
     </head>
     <body>
         <div class="container">
+            <div class="input-group my-2">
+                <span class="input-group-text bg-success text-white">Usuário:</span>
+                <span class="input-group-text">{{ app.user ? app.user.userIdentifier : "&lt;Anônimo&gt;" }}</span>
+            </div>
             <h1>{{ block('title') }}</h1>
             {# pass an array argument to get the messages of those types  #}
             {% for type, messages in app.flashes(['success', 'sucess']) %}
