--- a/controle_series_symfony/templates/base.html.twig
+++ b/controle_series_symfony/templates/base.html.twig
@@ -21,9 +21,14 @@
     </head>
     <body>
         <div class="container">
-            <div class="input-group my-2">
-                <span class="input-group-text bg-success text-white">Usuário:</span>
-                <span class="input-group-text">{{ app.user ? app.user.userIdentifier : "&lt;Anônimo&gt;" }}</span>
+            <div class="container-fluid bg-light d-flex justify-content-between align-items-center p-3">
+                <a href="{{ path('app_series') }}">
+                    Home
+                </a>
+                <a href="{{ path(app.user ? 'app_logout' : 'app_login') }}">
+                    {{ app.user ? "Logout" : "Login" }}
+                </a>
+
             </div>
             <h1>{{ block('title') }}</h1>
             {# pass an array argument to get the messages of those types  #}
