--- a/controle_series_symfony/templates/base.html.twig
+++ b/controle_series_symfony/templates/base.html.twig
@@ -21,15 +21,22 @@
     </head>
     <body>
         <div class="container">
+            {# {% if is_granted('ROLE_USER') %} #}
+            {% if is_granted('IS_AUTHENTICATED_FULLY') %}
             <div class="container-fluid bg-light d-flex justify-content-between align-items-center p-3">
                 <a href="{{ path('app_series') }}">
                     Home
                 </a>
-                <a href="{{ path(app.user ? 'app_logout' : 'app_login') }}">
-                    {{ app.user ? "Logout" : "Login" }}
+                <a href="{{ path('app_logout') }}">
+                    Sair
                 </a>
-
             </div>
+            {% else %}
+            <a href="{{ path('app_login') }}">
+                Entrar
+            </a>
+            {% endif %}
+
             <h1>{{ block('title') }}</h1>
             {# pass an array argument to get the messages of those types  #}
             {% for type, messages in app.flashes(['success', 'sucess']) %}
